--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -126,6 +126,191 @@ cards:
 
 ##############################################################################################################################
 
+# Only shown for UK
+
+  - heading: Testing and capacity, by pillar
+    cardType: chart
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of lab-confirmed positive or negative COVID-19 test results, by pillar, by date reported.  This is a 
+      count of test results and may include multiple tests for an individual person.  Pillar breakdown options 
+      can be applied to filter the data to display best estimates for different types of testing (swab testing for 
+      antigens, antibody testing and surveillance testing). Testing capacity is based on reports from labs on how 
+      many tests they have capacity to carry out each day based on availability of staff and resources.
+
+    download:
+      - plannedCapacityByPublishDate
+      - capacityPillarOne
+      - capacityPillarTwo
+      - capacityPillarThree
+      - capacityPillarsOneTwo
+      - capacityPillarsOneTwoFour
+      - newTestsByPublishDate
+      - newPillarOneTestsByPublishDate
+      - newPillarTwoTestsByPublishDate
+      - newPillarThreeTestsByPublishDate
+      - newPillarFourTestsByPublishDate
+      - newPillarOneTwoTestsByPublishDate
+      - newPillarOneTwoFourTestsByPublishDate
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - Pillars 1 2
+        - Pillar 3
+        - Pillar 4
+    
+    Pillars 1 2:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Tests processed (pillars 1 & 2)
+              value: newPillarOneTwoTestsByPublishDate
+              tooltip: Daily number of tests processed (pillars 1 & 2) by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Tests processed (pillars 1 & 2, 7-day average)
+              value: newPillarOneTwoTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of tests processed (pillars 1 & 2)
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+
+            - label: Testing capacity (pillars 1 & 2)
+              value: capacityPillarsOneTwo
+              tooltip: Estimated daily pillar 1 and 2 capacity reported by laboratories
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily tests processed (pillars 1 & 2)
+              value: newPillarOneTwoTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of pillar 1 and 2 tests processed by date reported
+
+            - label: Lab capacity (pillars 1 & 2)
+              value: capacityPillarsOneTwo
+              type: numeric
+              tooltip: Estimated daily pillar 1 & 2 capacity reported by laboratories
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+    Pillar 3:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Tests processed (pillar 3)
+              value: newPillarThreeTestsByPublishDate
+              tooltip: Daily number of tests processed (pillar 3) by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Tests processed (pillar 3, 7-day average)
+              value: newPillarThreeTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of tests processed (pillar 3)
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+
+            - label: Testing capacity (pillar 3)
+              value: capacityPillarThree
+              tooltip: Estimated daily pillar 3 capacity reported by laboratories
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily tests processed (pillar 3)
+              value: newPillarThreeTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of pillar 3 tests processed by date reported
+
+            - label: Lab capacity (pillar 3)
+              value: capacityPillarsThree
+              type: numeric
+              tooltip: Estimated daily pillar 3 capacity reported by laboratories
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+    Pillar 4:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Tests processed (pillar 4)
+              value: newPillarFourTestsByPublishDate
+              tooltip: Daily number of tests processed (pillar 4) by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Tests processed (pillar 4, 7-day average)
+              value: newPillarFourTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of tests processed (pillar 4)
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily tests processed (pillar 4)
+              value: newPillarFourTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of pillar 4 tests processed by date reported
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+##############################################################################################################################
+
   - heading: Testing by Pillar
     cardType: chart
     fullWidth: true
