Testing - removed pillar 1 2 and pillar 4 breakdowns from testing and capacity by pillar card

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -140,24 +140,24 @@ cards:
     abstract: >
       Number of lab-confirmed positive or negative COVID-19 test results, by pillar, by date reported.  This is a 
       count of test results and may include multiple tests for an individual person.  Pillar breakdown options 
-      can be applied to filter the data to display best estimates for different types of testing (swab testing for 
-      antigens, antibody testing and surveillance testing). Testing capacity is based on reports from labs on how 
-      many tests they have capacity to carry out each day based on availability of staff and resources.
+      can be applied to filter the data to display best estimates for antigen swab testing or antibody serology 
+      testing. Testing capacity is based on reports from labs on how many tests they have capacity to carry out 
+      each day based on availability of staff and resources.
 
     download:
       - plannedCapacityByPublishDate
-      - capacityPillarOne
-      - capacityPillarTwo
-      - capacityPillarThree
-      - capacityPillarOneTwo
+#      - capacityPillarOne
+#      - capacityPillarTwo
+#      - capacityPillarThree
+#      - capacityPillarOneTwo
       - capacityPillarOneTwoFour
       - newTestsByPublishDate
-      - newPillarOneTestsByPublishDate
-      - newPillarTwoTestsByPublishDate
-      - newPillarThreeTestsByPublishDate
-      - newPillarFourTestsByPublishDate
-      - newPillarOneTwoTestsByPublishDate
-#      - newPillarOneTwoFourTestsByPublishDate
+#      - newPillarOneTestsByPublishDate
+#      - newPillarTwoTestsByPublishDate
+#      - newPillarThreeTestsByPublishDate
+#      - newPillarFourTestsByPublishDate
+#      - newPillarOneTwoTestsByPublishDate
+      - newPillarOneTwoFourTestsByPublishDate
 
     options:
       type: radio
@@ -165,9 +165,9 @@ cards:
       choices:
         - All pillars
         - Pillars 1 2 4
-        - Pillars 1 2
+#        - Pillars 1 2
         - Pillar 3
-        - Pillar 4
+#        - Pillar 4
     
     All pillars:
       
@@ -289,57 +289,57 @@ cards:
           tabType: metadata
           filename: cardMetadata/testing/cardTestingAndCapacity.md
 
-    Pillars 1 2:
+    # Pillars 1 2:
       
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: normal
-          fields:
-            - label: Tests processed (pillars 1 & 2)
-              value: newPillarOneTwoTestsByPublishDate
-              tooltip: Daily number of tests processed by date reported (pillars 1 & 2)
-              type: bar
-              colour: 0
-              rollingAverage: false
+    #   tabs:
+    #     - heading: Daily
+    #       tabType: chart
+    #       barType: normal
+    #       fields:
+    #         - label: Tests processed (pillars 1 & 2)
+    #           value: newPillarOneTwoTestsByPublishDate
+    #           tooltip: Daily number of tests processed by date reported (pillars 1 & 2)
+    #           type: bar
+    #           colour: 0
+    #           rollingAverage: false
 
-            - label: Tests processed (pillars 1 & 2, 7-day average)
-              value: newPillarOneTwoTestsByPublishDate
-              tooltip: 7 day rolling average of the daily number of tests processed (pillars 1 & 2)
-              type: line
-              colour: 3
-              fill: false
-              rollingAverage: true
+    #         - label: Tests processed (pillars 1 & 2, 7-day average)
+    #           value: newPillarOneTwoTestsByPublishDate
+    #           tooltip: 7 day rolling average of the daily number of tests processed (pillars 1 & 2)
+    #           type: line
+    #           colour: 3
+    #           fill: false
+    #           rollingAverage: true
 
-            - label: Testing capacity (pillars 1 & 2)
-              value: capacityPillarOneTwo
-              tooltip: Estimated daily capacity reported by laboratories (pillars 1 & 2)
-              type: line
-              colour: 6
-              fill: true
-              rollingAverage: false
+    #         - label: Testing capacity (pillars 1 & 2)
+    #           value: capacityPillarOneTwo
+    #           tooltip: Estimated daily capacity reported by laboratories (pillars 1 & 2)
+    #           type: line
+    #           colour: 6
+    #           fill: true
+    #           rollingAverage: false
 
-        - heading: Data
-          tabType: table
-          fields:
-            - label: Date reported
-              value: date
-              type: date
-              tooltip: Date reported on coronavirus.data.gov.uk
+    #     - heading: Data
+    #       tabType: table
+    #       fields:
+    #         - label: Date reported
+    #           value: date
+    #           type: date
+    #           tooltip: Date reported on coronavirus.data.gov.uk
 
-            - label: Daily tests processed (pillars 1 & 2)
-              value: newPillarOneTwoTestsByPublishDate
-              type: numeric
-              tooltip: Daily number of tests processed by date reported (pillars 1 & 2)
+    #         - label: Daily tests processed (pillars 1 & 2)
+    #           value: newPillarOneTwoTestsByPublishDate
+    #           type: numeric
+    #           tooltip: Daily number of tests processed by date reported (pillars 1 & 2)
 
-            - label: Lab capacity (pillars 1 & 2)
-              value: capacityPillarOneTwo
-              type: numeric
-              tooltip: Estimated daily capacity reported by laboratories (pillars 1 & 2)
+    #         - label: Lab capacity (pillars 1 & 2)
+    #           value: capacityPillarOneTwo
+    #           type: numeric
+    #           tooltip: Estimated daily capacity reported by laboratories (pillars 1 & 2)
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/testing/cardTestingAndCapacity.md
+    #     - heading: About 
+    #       tabType: metadata
+    #       filename: cardMetadata/testing/cardTestingAndCapacity.md
 
     Pillar 3:
       
@@ -393,44 +393,44 @@ cards:
           tabType: metadata
           filename: cardMetadata/testing/cardTestingAndCapacity.md
 
-    Pillar 4:
+    # Pillar 4:
       
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: normal
-          fields:
-            - label: Tests processed (pillar 4)
-              value: newPillarFourTestsByPublishDate
-              tooltip: Daily number of tests processed by date reported (pillar 4)
-              type: bar
-              colour: 0
-              rollingAverage: false
+    #   tabs:
+    #     - heading: Daily
+    #       tabType: chart
+    #       barType: normal
+    #       fields:
+    #         - label: Tests processed (pillar 4)
+    #           value: newPillarFourTestsByPublishDate
+    #           tooltip: Daily number of tests processed by date reported (pillar 4)
+    #           type: bar
+    #           colour: 0
+    #           rollingAverage: false
 
-            - label: Tests processed (pillar 4, 7-day average)
-              value: newPillarFourTestsByPublishDate
-              tooltip: 7 day rolling average of the daily number of tests processed (pillar 4)
-              type: line
-              colour: 3
-              fill: false
-              rollingAverage: true
+    #         - label: Tests processed (pillar 4, 7-day average)
+    #           value: newPillarFourTestsByPublishDate
+    #           tooltip: 7 day rolling average of the daily number of tests processed (pillar 4)
+    #           type: line
+    #           colour: 3
+    #           fill: false
+    #           rollingAverage: true
 
-        - heading: Data
-          tabType: table
-          fields:
-            - label: Date reported
-              value: date
-              type: date
-              tooltip: Date reported on coronavirus.data.gov.uk
+    #     - heading: Data
+    #       tabType: table
+    #       fields:
+    #         - label: Date reported
+    #           value: date
+    #           type: date
+    #           tooltip: Date reported on coronavirus.data.gov.uk
 
-            - label: Daily tests processed (pillar 4)
-              value: newPillarFourTestsByPublishDate
-              type: numeric
-              tooltip: Daily number of tests processed by date reported (pillar 4)
+    #         - label: Daily tests processed (pillar 4)
+    #           value: newPillarFourTestsByPublishDate
+    #           type: numeric
+    #           tooltip: Daily number of tests processed by date reported (pillar 4)
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/testing/cardTestingAndCapacity.md
+    #     - heading: About 
+    #       tabType: metadata
+    #       filename: cardMetadata/testing/cardTestingAndCapacity.md
 # {{ EndDevOnlyBlock}}
 ##############################################################################################################################
 
