testing - made pillar breakdown capacity and tests downloadable even where not published in card charts and data tables.

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -146,16 +146,16 @@ cards:
 
     download:
       - plannedCapacityByPublishDate
-#      - capacityPillarOne
-#      - capacityPillarTwo
-#      - capacityPillarThree
+      - capacityPillarOne
+      - capacityPillarTwo
+      - capacityPillarThree
 #      - capacityPillarOneTwo
       - capacityPillarOneTwoFour
       - newTestsByPublishDate
-#      - newPillarOneTestsByPublishDate
-#      - newPillarTwoTestsByPublishDate
-#      - newPillarThreeTestsByPublishDate
-#      - newPillarFourTestsByPublishDate
+      - newPillarOneTestsByPublishDate
+      - newPillarTwoTestsByPublishDate
+      - newPillarThreeTestsByPublishDate
+      - newPillarFourTestsByPublishDate
 #      - newPillarOneTwoTestsByPublishDate
       - newPillarOneTwoFourTestsByPublishDate
 
