--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -140,9 +140,9 @@ cards:
     abstract: >
       Number of lab-confirmed positive or negative COVID-19 test results, by pillar, by date reported.  This is a 
       count of test results and may include multiple tests for an individual person.  Pillar breakdown options 
-      can be applied to filter the data to display best estimates for antigen swab testing or antibody serology 
-      testing. Testing capacity is based on reports from labs on how many tests they have capacity to carry out 
-      each day based on availability of staff and resources.
+      can be applied to filter the data to display best estimates for antigen swab testing (pillars 1, 2 and 4) or 
+      antibody serology testing (pillar 3). Testing capacity is based on reports from labs on how many tests they 
+      have capacity to carry out each day based on availability of staff and resources.
 
     download:
       - plannedCapacityByPublishDate
